# orca-lsp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  conftest.py  coverage.json  pyproject.toml
.github/workflows/: ci.yml
.maintenance/: last-run.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  USER_GUIDE.md
examples/: benzene.inp  ethylene.inp  water.inp
src/orca_lsp/: __init__.py  keywords.py  parser.py  server.py
tests/: __init__.py  conftest.py  test_100_coverage.py  test_100_percent_coverage.py  test_basic.py  test_else_branch_coverage.py  test_final_coverage.py  test_final_missing_coverage.py  test_full_coverage_enhanced.py  test_keywords.py  test_missing_coverage.py  test_new_features.py  test_parser.py  test_parser_coverage.py  test_server.py  test_server_coverage.py  test_special_chars_coverage.py  test_v052_features.py  test_validation_accuracy.py
