[project]
name = "orca-lsp"
version = "0.1.0"
description = "Language Server Protocol for ORCA quantum chemistry software"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pygls>=1.2.0",
    "lsprotocol>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
orca-lsp = "orca_lsp.server:main"
